Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/cscript_add_to_qm.cs
int w=win("" "QM_Editor")
if w
	int w1=win("Quick Macros - ok - [cscript_add_to_qm]" "QM_Editor")
	men 101 w1 ;;Exit Program
	wait 15 WP

int h=